Added references to Tables
Added to results.  The references to Table 2 and new Table A1 spawner tables.

--- a/OilSardine_NOAA_MoES.Rmd
+++ b/OilSardine_NOAA_MoES.Rmd
@@ -106,7 +106,9 @@ Model selection was conducted in a step-wise fashion.  The length of the covaria
 
 # Results
 
-There was support for including the post-spawning catch in the previous year as an explanatory variable for the catch during the spawning season (3rd quarter).  Models with $ln(N_{t-1})$ were strongly supported over an intercept only model (Table `r ref("tab:spawner_model_selection")`, time-dependency test).  However the addition of the catch two years prior, $ln(N_{t-2})$, lead to either no decrease in the residual deviance (i.e. increase in the explained variance) and in fact, increased the residual deviance for the model with non-linearity (Table `r ref("tab:spawner_model_selection")`, Linearity test).  We also tested the support for non-linearity in the effect of the prior year catch on the catch in the spawning season.  This was done by comparing models with $ln(N_{t-1})$ included as a linear term or as a non-linear function $s(ln(N_{t-1}))$ (Table `r ref("tab:spawner_model_selection")`, Linearity test).  The residual deviance decreased using a non-linear response however the cost was 1.4 degrees of freedom.  The rest was only weak (non-significant) support for allowing a non-linear response.  The results were the same if we used the full landings dataset (1956-2015) or only the data that used for the covariate analysis (1982-2015) (Tables `r ref("tabappA:spawner-model-time", pre="A")` and `r ref("tabappA:spawner-model-linearity", pre="A")`).
+There was support for including the post-spawning catch in the previous year as an explanatory variable for the catch during the spawning season (3rd quarter).  Models with $ln(N_{t-1})$ were strongly supported over an intercept only model (Table `r ref("tab:spawner_model_selection")`, time-dependency test).  However the addition of the catch two years prior, $ln(N_{t-2})$, lead to either no decrease in the residual deviance (i.e. increase in the explained variance) and in fact, increased the residual deviance for the model with non-linearity (Table `r ref("tab:spawner_model_selection")`, Linearity test).  We also tested the support for non-linearity in the effect of the prior year catch on the catch in the spawning season.  This was done by comparing models with $ln(N_{t-1})$ included as a linear term or as a non-linear function $s(ln(N_{t-1}))$ (Table `r ref("tab:spawner_model_selection")`, Linearity test).  The residual deviance decreased using a non-linear response however the cost was 1.4 degrees of freedom.  The result was only weak (non-significant) support for allowing a non-linear response.  The results were the same if we used the full landings dataset (1956-2015) or only the data that used for the covariate analysis (1982-2015) (Tables `r ref("tabappA:spawner-model-time-1956v1982", pre="A")` and `r ref("tabappA:spawner-model-linearity-1956v1982", pre="A")`).  The full set of models explored are given in Appendix A.  Overall, the landings in prior seasons was only weakly explanatory for the catch in the spawning months, and the maximum $R^2$ was less than 30% (Table `r ref("tab:spawner_model_selection")`).
+
+The results were similar for models of the landings  during the non-spawning months ($N_t$) of the sardine season (Table `r ref("tab:nonspawner-models")`).  The most supported model for $N_t$ used a non-linear response to landings during the non-spawning months of the previous season: $ln(N_t) \sim ln(N_{t-1})$ with a non-linear response to landings during the spawning months two seasons prior (Table `r ref("tab:nonspawner-models")`).  There was low support for including landings from the non-spawner months two seasons prior or for using the landings during the spawning months in the prior season (Tables `r ref("tabappA:nonspawner-model-time-a", pre="A")`, `r ref("tabappA:nonspawner-model-time-b", pre="A")`, and `r ref("tabappA:nonspawner-model-time-c", pre="A")`). 
 
 There was no support for using precipitation during the summer monsoon (Jun-Jul) or pre-monsoon period (Apr-May) as an explanatory variable for the 3rd quarter catch (Table B1).  This was the case whether precipitation in the current or previous season was used, if precipitation was included as non-linear or non-linear effect, or if the smoothing term (degree of non-linearity allowed) was estimated and thus not constrained, and if either the 1982-2015 remote-sensing precipitation was used or the 1956-2015 land-based precipitation was used.
 
@@ -173,8 +175,6 @@ cat("\\clearpage")
 ```{r, results="asis", echo=FALSE}
 cat("\\clearpage")
 ```
-
-#
 
 ```{r child = 'Appendices.Rmd', echo=FALSE}
 ```
