--- a/OilSardine_NOAA_MoES.Rmd
+++ b/OilSardine_NOAA_MoES.Rmd
@@ -106,15 +106,19 @@ Model selection was conducted in a step-wise fashion.  The length of the covaria
 
 # Results
 
-There was support for including the post-spawning catch in the previous year as an explanatory variable for the catch during the spawning season (3rd quarter).  Models with $ln(N_{t-1})$ were strongly supported over an intercept only model (Table `r ref("tab:spawner_model_selection")`, time-dependency test).  However the addition of the catch two years prior, $ln(N_{t-2})$, lead to either no decrease in the residual deviance (i.e. increase in the explained variance) and in fact, increased the residual deviance for the model with non-linearity (Table `r ref("tab:spawner_model_selection")`, Linearity test).  We also tested the support for non-linearity in the effect of the prior year catch on the catch in the spawning season.  This was done by comparing models with $ln(N_{t-1})$ included as a linear term or as a non-linear function $s(ln(N_{t-1}))$ (Table `r ref("tab:spawner_model_selection")`, Linearity test).  The residual deviance decreased using a non-linear response however the cost was 1.4 degrees of freedom.  The result was only weak (non-significant) support for allowing a non-linear response.  The results were the same if we used the full landings dataset (1956-2015) or only the data that used for the covariate analysis (1982-2015) (Tables `r ref("tabappA:spawner-model-time-1956v1982", pre="A")` and `r ref("tabappA:spawner-model-linearity-1956v1982", pre="A")`).  The full set of models explored are given in Appendix A.  Overall, the landings in prior seasons was only weakly explanatory for the catch in the spawning months, and the maximum $R^2$ was less than 30% (Table `r ref("tab:spawner_model_selection")`).
+## Catches in prior seasons as explanatory variables
+
+There was support for including the post-spawning catch in the previous year as an explanatory variable for the catch during the spawning season (3rd quarter).  Models with $ln(N_{t-1})$ were strongly supported over an intercept only model (Table `r ref("tab:spawner_model_selection")`, time-dependency test).  However the addition of the catch two years prior, $ln(N_{t-2})$, lead to either no decrease in the residual deviance (i.e. increase in the explained variance) and in fact, increased the residual deviance for the model with non-linearity (Table `r ref("tab:spawner_model_selection")`, Linearity test).  We also tested the support for non-linearity in the effect of the prior year catch on the catch in the spawning season.  This was done by comparing models with $ln(N_{t-1})$ included as a linear term or as a non-linear function $s(ln(N_{t-1}))$ (Table `r ref("tab:spawner_model_selection")`, Linearity test).  The residual deviance decreased using a non-linear response however the cost was 1.4 degrees of freedom.  The result was only weak (non-significant) support for allowing a non-linear response.  The full set of models tested, including tests using catch during the spawning months in previous seasons as a covariate are shown in Tables `r ref("tabappA:spawner-model-linear", pre="A")` and `r ref("tabappA:spawner-model-nonlinear", pre="A")`.  The results were the same if we used the full landings dataset from 1956 to 2015 (Table `r ref("tabappA:spawner-model-1956", pre="A")`).  Overall, the landings in prior seasons was only weakly explanatory for the catch in the spawning months, and the maximum $R^2$ was less than 30% (Table `r ref("tab:spawner_model_selection")`).
 
 The results were similar for models of the landings  during the non-spawning months ($N_t$) of the sardine season (Table `r ref("tab:nonspawner-models")`).  The most supported model for $N_t$ used a non-linear response to landings during the non-spawning months of the previous season: $ln(N_t) \sim ln(N_{t-1})$ with a non-linear response to landings during the spawning months two seasons prior (Table `r ref("tab:nonspawner-models")`).  There was low support for including landings from the non-spawner months two seasons prior or for using the landings during the spawning months in the prior season (Tables `r ref("tabappA:nonspawner-model-time-a", pre="A")`, `r ref("tabappA:nonspawner-model-time-b", pre="A")`, and `r ref("tabappA:nonspawner-model-time-c", pre="A")`). 
 
-There was no support for using precipitation during the summer monsoon (Jun-Jul) or pre-monsoon period (Apr-May) as an explanatory variable for the 3rd quarter catch (Table B1).  This was the case whether precipitation in the current or previous season was used, if precipitation was included as non-linear or non-linear effect, or if the smoothing term (degree of non-linearity allowed) was estimated and thus not constrained, and if either the 1982-2015 remote-sensing precipitation was used or the 1956-2015 land-based precipitation was used.
+## Environmental covariates as explanatory variables
 
-However, we found significant correlation between average sea surface temperature during the early post-spawning period (Jul-Dec) and catch during the spawning season (Table 2).  Sea surface temperature has been found to be correlated with sardine biomass in a number of other studies [@JacobsonMacCall1995; add the others].  The residual deviance was lowest in a model with SST in both the prior year and two years prior included and with a non-linear response for both. This a similar result to Jacobson and MacCall [-@JacobsonMacCall1995] who found that SST in multiple prior years was supported as explanatory variables for sardine recruitment and productivity.  However the reduction in degrees of freedom was high for this model and it was not supported, despite having the lowest residual degrees of freedom, given the cost (loss of degrees of freedom).  The model with the lowest AIC and with a p-value of 0.108 for the F-test was a model with only the past year and non-linear response.  The response shows a step-response with a negative effect at low temperatures and then an increased effect a higher temperatures (Figure `r ref("fig:SSTeffect")`).  This type of step-response has been found in studies of the effect of SST on recruitment in Pacific sardines (*citations from Jacobson and MacCall*).  The R2 for this model was 0.50 (Table 2).
+There was no support for using precipitation during the summer monsoon (Jun-Jul) or pre-monsoon period (Apr-May) as an explanatory variable for the catch during the spawning months (Table `r ref("tabappB:spawner-model-precip", pre="B")`).  This was the case whether precipitation in the current or previous season was used, if precipitation was included as non-linear or non-linear effect, or if the smoothing term (degree of non-linearity allowed) was estimated and thus not constrained, and if either the 1982-2015 remote-sensing precipitation data (GPCP precipitation) were used or the 1956-2015 land-based precipitation data were used (Table `r ref("tabappB:spawner-model-precip", pre="B")`).
 
-The strongest predictor of the catch during the spawning season however was the upwelling strength during Jan-Mar (Table 3), during a period when the young of the year and age-1 fish would be found feeding in large shoals in the coastal region.  The is the time of year with the second highest catches that are dominated by small-sized fish (*citation*).  The model with lowest residual deviance included a non-linear effect of upwelling in the prior year and two years prior.  As for SST, the cost in terms of low of degrees of freedom led to this model not being the best supported.  The best supported model included only the upwelling strength in the prior year, not two years prior, and included a non-linear response (Table 3).  The $R^2$ for this model was 0.63 (Figure `r ref("fig:fittedmodel")`).
+However, we found significant correlation between average sea surface temperature during the early post-spawning period (Jul-Dec) and catch during the spawning season (Table 3, Table `r ref("tabappB:spawner-model-sst", pre="B")`).  Sea surface temperature has been found to be correlated with sardine biomass in a number of other studies [@JacobsonMacCall1995; add the others].  The residual deviance was lowest in a model with SST in both the prior year and two years prior included and with a non-linear response for both. This a similar result to Jacobson and MacCall [-@JacobsonMacCall1995] who found that SST in multiple prior years was supported as explanatory variables for sardine recruitment and productivity.  However the reduction in degrees of freedom was high for this model and it was not supported, despite having the lowest residual degrees of freedom, given the cost (loss of degrees of freedom).  The model with the lowest AIC was a model with only the past year and a non-linear response.  The response shows a step-response with a negative effect at low temperatures and then an increased effect a higher temperatures (Figure `r ref("fig:SSTeffect")`).  This type of step-response has been found in studies of the effect of SST on recruitment in Pacific sardines (*citations from Jacobson and MacCall*).  The $R^2$ for this model was 0.50 (Table 3).
+
+The strongest predictor of the catch during the spawning season however was the upwelling strength during Jan-Mar (Table 3, Table `r ref("tabappB:spawner-model-upw", pre="B")`), during a period when the young of the year and age-1 fish would be found feeding in large shoals in the coastal region.  The is the time of year with the second highest catches that are dominated by small-sized fish (*citation*).  The model with lowest residual deviance included a non-linear effect of upwelling in the prior year and two years prior.  As for SST, the cost in terms of low of degrees of freedom led to this model not being the best supported.  The best supported model included only the upwelling strength in the prior year, not two years prior, and included a non-linear response (Table 3).  The $R^2$ for this model was 0.63 (Figure `r ref("fig:fittedmodel")`).
 
 *Still to do.  Test interactions between the variables that turned out to be important.*
 
@@ -149,11 +153,11 @@ Figure `r ref("fig:CHL")`.  Average Chlorophyll-a bloom intensity in 2016 by qua
 
 Figure `r ref("fig:precipts")`.  Monthly rainfall 1956-2014 from Kerala.
 
-Figure `r ref("fig:UPWts")`.  Monthly Upwelling Index 1981-2012 off the Kerala coast. The upwelling index is the difference between the near-shore and offshore sea surface temperature.
+Figure `r ref("fig:UPWts")`.  Monthly Upwelling Index 1981-2012 off the Kerala coast from north to south. The boxes are shown in Figure `r ref("fig:studyarea")`.  The upwelling index is the difference between the near-shore and 3 degrees longitude offshore sea surface temperature.
 
-Figure `r ref("fig:CHLts")`.  Monthly Chl-a 1997-2017 off the Kerala coast. 
+Figure `r ref("fig:CHLts")`.  Monthly surface chlorophyll-a (Chl-a) 1997-2017 off the Kerala coast from north to south. The boxes are shown in Figure `r ref("fig:studyarea")`.  
 
-Figure `r ref("fig:SSTts")`.  Monthly SST 1981-2012 off the Kerala coast. [*missing*]
+Figure `r ref("fig:SSTts")`.  Monthly average sea surface temperature (SST) off the Kerala coast (box 4 only in Figure `r ref("fig:studyarea")`.  ).  Panel A) shows the monthly average SST from 2000 to 2005.  Panel B) shows the monthly average SST over all available years 1981-2015.
 
 Figure `r ref("fig:SSTeffect")`.  Non-linear effect of temperature on catch during the spawning season (3rd quarter). [*missing*]
 
