--- a/Appendices.Rmd
+++ b/Appendices.Rmd
@@ -41,6 +41,14 @@ cat("\\clearpage")
 
 #
 
+```{r, results="asis", echo=FALSE}
+cat("\\clearpage")
+```
+
+```{r child = 'Table App B nonspawner covariates.Rmd'}
+```
+
+#
 
 ```{r, results="asis", echo=FALSE}
 cat("\\clearpage")
